# event_plot

./: .gitignore  CMakeLists.txt  ReadMe.md
include/: event_io.hpp  event_point_type.hpp  event_viewer.hpp
matlab/: plot_stream.m
src/: event_io.cpp  event_viewer.cpp  main.cpp
